# component-shape

./: .gitignore  AGENTS.md  Cargo.toml  README.md  codecov.yaml  justfile
.github/workflows/: ci.yml
crates/component-shape/: Cargo.toml
crates/component-shape-codegen/: Cargo.toml
crates/component-shape-codegen/src/: assertions.rs  docs.rs  identifiers.rs  imports.rs  lib.rs  mcp.rs  paths.rs  rust_syntax.rs  shapes.rs  spans.rs  substitute.rs  tests.rs
crates/component-shape-gpui/: Cargo.toml
crates/component-shape-gpui-macros/: Cargo.toml
crates/component-shape-gpui-macros/src/: lib.rs
crates/component-shape-gpui-macros/src/derives/: component_shape.rs  component_shape_constructor.rs  component_shape_metadata.rs  component_shape_state.rs  crate_paths.rs  mod.rs
crates/component-shape-gpui/src/: lib.rs
crates/component-shape-gpui/tests/: trybuild.rs
crates/component-shape-gpui/tests/ui/: basic_shape.rs  builder_shape.rs  derive_shape.rs  explicit_mcp_input_shape.rs  generic_shape.rs  incompatible_value.rs  incompatible_value.stderr  inferred_value_binding_shape.rs  invalid_mcp_input.rs  invalid_mcp_input.stderr  invalid_suffix.rs  invalid_suffix.stderr  manual_compatibility_impl.rs  manual_compatibility_impl.stderr  missing_state.rs  missing_state.stderr  missing_value.rs  missing_value.stderr  render_component.rs  value_binding_shape.rs  value_binding_without_impl.rs  value_binding_without_impl.stderr
crates/component-shape-mcp/: Cargo.toml  README.md
crates/component-shape-mcp-macros/: Cargo.toml
crates/component-shape-mcp-macros/src/: crate_paths.rs  json_schema.rs  lib.rs  options.rs  tests.rs  tool_input.rs
crates/component-shape-mcp/docs/: ARCHITECTURE.md
crates/component-shape-mcp/src/: arguments.rs  definitions.rs  error.rs  input_schema.rs  lib.rs  metadata.rs  names.rs  results.rs  schema.rs  server.rs  stdio_smoke.rs  tests.rs  validation.rs
crates/component-shape/src/: component_suffix.rs  field_component.rs  lib.rs  mcp.rs  metadata.rs  rust_syntax.rs  value_change.rs
skills/use-component-shape/: SKILL.md
skills/use-component-shape-gpui/: SKILL.md
skills/use-component-shape-gpui/agents/: openai.yaml
skills/use-component-shape/agents/: openai.yaml
