[workspace]
members = [
  "crates/component-shape",
  "crates/component-shape-codegen",
  "crates/component-shape-gpui",
  "crates/component-shape-gpui-macros",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://github.com/stayhydated/component-shape"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
component-shape = { path = "crates/component-shape", version = "0.1.0" }
component-shape-codegen = { path = "crates/component-shape-codegen", version = "0.1.0" }
component-shape-gpui = { path = "crates/component-shape-gpui", version = "0.1.0" }
component-shape-gpui-macros = { path = "crates/component-shape-gpui-macros", version = "0.1.0" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "832c17e8192e2e1d472f0751e7cef2af84ded622" }
heck = "0.5"
prettyplease = "0.2"
proc-macro-crate = "3.2"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { default-features = false, version = "2.0" }
thiserror = "2.0"
trybuild = "1.0"

[replace]
"https://github.com/zed-industries/zed#gpui@0.2.2" = { git = "https://github.com/zed-industries/zed", rev = "832c17e8192e2e1d472f0751e7cef2af84ded622" }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
derive_partial_eq_without_eq = "warn"
err_expect = "warn"
incompatible_msrv = "deny"
iter_on_single_items = "warn"
needless_bool = "warn"
redundant_clone = "warn"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"
useless_conversion = "warn"
