[package]
name = "component-shape-codegen"
description = """
Code generation support shared by component-shape consumers.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
component-shape = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [
  "clone-impls",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "visit-mut",
], workspace = true }

[lints]
workspace = true
