[package]
name = "component-shape-gpui-macros"
description = """
Proc macros for component-shape-gpui.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
component-shape = { workspace = true }
component-shape-codegen = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [
  "clone-impls",
  "full",
  "parsing",
  "printing",
  "proc-macro",
], workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }

[lints]
workspace = true
