[package]
name = "component-shape-mcp-macros"
description = """
Proc macros for component-shape-mcp schema helpers.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [
  "clone-impls",
  "derive",
  "full",
  "parsing",
  "printing",
  "proc-macro",
], workspace = true }

[lints]
workspace = true
