[package]
name = "component-shape-mcp"
description = """
Shared MCP protocol and schema helpers for component-shape integrations.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
chrono = [ "dep:chrono" ]
default = [ "derive" ]
derive = [ "dep:component-shape-mcp-macros" ]
rust_decimal = [ "dep:rust_decimal" ]

[dependencies]
chrono = { optional = true, workspace = true }
component-shape = { workspace = true }
component-shape-mcp-macros = { optional = true, workspace = true }
rmcp = { workspace = true }
rust_decimal = { optional = true, workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
thiserror = { workspace = true }
tokio = { features = [ "rt-multi-thread" ], workspace = true }

[dev-dependencies]
rmcp = { features = [ "client" ], workspace = true }

[lints]
workspace = true
